gce/ingress-integration-master.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: 2018-11-05T23:36:38Z
  generation: 1
  labels:
    run: grip-web
  name: grip-web
  namespace: default
  resourceVersion: "1319"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/grip-web
  uid: a442daa4-e153-11e8-87ec-42010a8a01d2
spec:
  replicas: 1
  selector:
    matchLabels:
      run: grip-web
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: grip-web
    spec:
      containers:
      - image: gcr.io/grip-project-dev-integration/grip-image:latest
        imagePullPolicy: Always
        name: grip-web
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2018-11-05T23:36:38Z
    lastUpdateTime: 2018-11-05T23:36:38Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
