gce/ingress-integration-simple.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
spec:
  backend:
    serviceName: grip-web
    servicePort: 80
    image: gcr.io/grip-project-dev-integration/grip-image:latest
